--- a/app/src/main/res/layout-w700dp/art_card.xml
+++ b/app/src/main/res/layout-w700dp/art_card.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
 
     style="@style/MyTheme.Base"
@@ -9,34 +9,30 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
         android:layout_margin="4dp"
-        android:layout_gravity="left"
+        android:layout_gravity="center"
         android:elevation="1dp"
         card_view:cardCornerRadius="1dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_gravity="left"
-            android:gravity="left"
             android:layout_height="match_parent">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="300dp"
-                android:layout_alignParentLeft="true"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:id="@+id/art_thumb"
                 android:layout_margin="12dp"
-                android:adjustViewBounds="true"
                 android:scaleType="centerInside"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/art_card_title"
-                android:layout_alignTop="@id/art_thumb"
                 android:layout_toRightOf="@+id/art_thumb"
+                android:layout_alignTop="@id/art_thumb"
                 android:text="@string/nothing_here"
                 android:textSize="@dimen/font_regular"
                 android:textStyle="bold" />
