--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:layout_gravity="center"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context="org.feedhenry.apps.arthenry.MainActivity">
 
@@ -70,6 +72,7 @@
         android:id="@+id/art_cards_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:padding="5dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
