--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:orientation="vertical"
-    tools:context="org.feedhenry.apps.arthenry.MainActivity">
+    android:orientation="vertical">
 
 
     <android.support.v7.widget.Toolbar
@@ -32,10 +26,9 @@
         android:visibility="visible">
 
         <ProgressBar
-            android:indeterminate="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            />
+            android:indeterminate="true" />
 
         <TextView
             android:layout_width="wrap_content"
