--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -64,7 +64,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/art_cards_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:padding="5dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
