--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="org.feedhenry.apps.arthenry.MainActivity">
+    tools:context="org.aerogear.apps.memeolist.MainActivity">
 
     <View
         android:id="@+id/narrow"
